[package]
name = "recoverio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
sudo = "0.6.0"
fatfs = "0.3.6"
clap = { version = "4.2.7", features = ["derive"] }
dialoguer = "0.10.4"
ordinal = "0.3.2"
